<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/main_layout">

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/main_textview"
        android:layout_gravity="center"
        android:textSize="30sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <Button
        android:id="@+id/main_button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/main_button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_gravity="center"/>

</LinearLayout>